<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/lime_a100"
    android:id="@+id/mainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_title"
        android:id="@+id/textView"
        android:textColor="@color/green_a700"
        android:textSize="24dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_btn_title"
        android:id="@+id/spotifyBtn"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:background="@color/indigo_a700"
        android:textColor="#ffffffff"
        android:textSize="16dp"
        android:onClick="onClickSpotify" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app_btn_title"
        android:id="@+id/button2"
        android:background="@color/indigo_a700"
        android:textColor="#ffffffff"
        android:textSize="16dp"
        android:layout_below="@+id/spotifyBtn"
        android:layout_alignLeft="@+id/spotifyBtn"
        android:layout_alignStart="@+id/spotifyBtn"
        android:layout_alignRight="@+id/spotifyBtn"
        android:layout_alignEnd="@+id/spotifyBtn"
        android:layout_marginTop="20dp"
        android:onClick="onClickScores" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app_btn_title"
        android:id="@+id/button"
        android:background="@color/indigo_a700"
        android:textColor="#ffffffff"
        android:textSize="16dp"
        android:layout_below="@+id/button2"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:onClick="onClickLibrary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_btn_title"
        android:id="@+id/button3"
        android:background="@color/indigo_a700"
        android:textColor="#ffffffff"
        android:textSize="16dp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:onClick="onClickBigger" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_btn_title"
        android:id="@+id/button4"
        android:background="@color/indigo_a700"
        android:textColor="#ffffffff"
        android:textSize="16dp"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:onClick="onClickXYZ" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app_btn_title"
        android:id="@+id/button5"
        android:background="@color/pink_a400"
        android:textColor="#ffffffff"
        android:textSize="16dp"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:onClick="onClickCapstone" />
</RelativeLayout>
